--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                         <img src="images/LOGO5.png" style="height:60px;" alt="logo-image">
                     </div>
                     <nav>
-                        <ul id="menu-items">
+                        <ul id="menu-items" style="z-index: +1;">
                             <li><a href="">Home</a></li>
                             <li><a href="index2.html">Products</a></li>
                             <!-- <li><a href="about.html">About</a></li> -->
@@ -312,16 +312,15 @@
         </div>
 
         <!-- offer -->
-        <div class="offer">
+       <div class="offer">
             <div class="small-container">
-                <div class="row">
-                    <div class="col-6">
-                        <img src="images/asus-banner.png" class="offer-img">
+                <div class="row d-flex flex-column-reverse flex-md-row flex-wrap">
+                    <div class="col-12 col-md-6">
+                        <img src="images/asus-banner.png" class="offer-img img-fluid">
                     </div>
-                    <div class="col-6 text-data text-white">
-                        <p>Top Prodcuts you should take it</p>
-                        <h1>Best Product limitd offer!</h1>
-                        
+                    <div class="col-12 col-md-6 text-data text-white">
+                        <p>Top Products you should take it</p>
+                        <h1>Best Product limited offer!</h1>
                         <a href="" class="btn btn-main">Buy Now &#8594;</a>
                     </div>
                 </div>
